# ALotOfPendulums2

./: CMakeLists.txt  README.md  flip_time.cl  main.cpp
data/: flip_times.h5
scripts/: Requirements.txt  generate_img.py
